test/files/neg/t729.check
t729.scala:20: error: type mismatch;
 found   : ScalaParserAutoEdit.this.NodeImpl(in trait Parser)
 required: ScalaParserAutoEdit.this.NodeImpl(in trait ScalaParserAutoEdit)
      val yyy : NodeImpl = link.from;
                                ^
t729.scala:3: warning: Implicit definition should have explicit type (inferred Parser.this.Node) [quickfixable]
  implicit def coerce(n : NodeImpl) = n.self;
               ^
t729.scala:14: warning: Implicit definition should have explicit type (inferred ScalaParserAutoEdit.this.Node) [quickfixable]
  implicit def coerce(node : NodeImpl) = node.self;
               ^
2 warnings
1 error
